tests/errors/syn.overflow.s16-value.or
main :: () -> void {
    x := 100000s16;
    x;
};